<resources>
    <string name="app_name">Kantin Maitreya</string>
    <string name="chevron_right">chevron_right</string>
    <string name="username_hint">Username anda</string>
    <string name="username_empty">Username belum diisi</string>
    <string name="password_hint">Password anda</string>
    <string name="password_empty">Password belum diisi</string>
    <string name="server_hint">Alamat server anda</string>
    <string name="server_empty">Alamat server belum diisi</string>
    <string name="server_same">Alamat server tidak memiliki perbedaan</string>
    <string name="login">Login</string>
    <string name="server_config">Konfigurasi Server</string>
    <string name="connection_failed">Koneksi gagal</string>
    <string name="connection_try_again">Mau coba ulang?</string>
    <string name="yes">Ya</string>
    <string name="no">Tidak</string>
    <string name="save">Simpan</string>
    <string name="try_again">Silahkan coba lagi</string>
    <string name="success_save">Sukses menyimpan</string>
    <string name="failed_save">Gagal menyimpan</string>
    <string name="search">Cari</string>
    <string name="http">http://</string>
    <string name="login_failed">Username atau password salah</string>
    <string name="login_error">Proses login gagal. Silahkan coba lagi</string>
    <string name="change_password_under6">Password minimal 6 digit</string>
    <string name="change_password_hint">Password baru</string>
    <string name="change_password_null">Password baru tidak boleh kosong</string>
    <string name="change_password_success">Password baru sukses diganti</string>
    <string name="change_password_error">Proses ganti password gagal. Silahkan coba lagi</string>
    <string name="check_absen_error">Proses absen tidak makan gagal. Silahkan coba lagi</string>
    <string name="change_status_error">Proses merubah status siswa gagal. Silahkan coba lagi</string>
    <string name="scan_again">Scan Lagi</string>
    <string name="scan_status_morning">Siswa dengan NIS : %1$s sukses discan untuk %2$s makan pada pagi hari</string>
    <string name="scan_status_noon">Siswa dengan NIS : %1$s sukses discan untuk %2$s makan pada siang hari</string>
    <string name="scan_success_morning">Siswa dengan NIS : %1$s sukses discan tidak makan pada pagi hari</string>
    <string name="scan_success_noon">Siswa dengan NIS : %1$s sukses discan tidak makan pada siang hari</string>
    <string name="scan_already_morning">Siswa dengan NIS : %1$s sudah pernah di scan tidak makan pada pagi hari</string>
    <string name="scan_already_noon">Siswa dengan NIS : %1$s sudah pernah di scan tidak makan pada siang hari</string>
    <string name="scan_portion">Siswa dengan NIS : %1$s sukses discan untuk merubah porsi %2$s menjadi %3$s</string>
    <string name="scan_failed">Siswa dengan NIS : %1$s gagal di scan</string>
    <string name="scan_failed_status_morning">Status makan siswa dengan %1$s pada waktu pagi dalam kondisi non-aktif atau tidak ditemukan</string>
    <string name="scan_failed_status_noon">Status makan siswa dengan %1$s pada waktu siang dalam kondisi non-aktif atau tidak ditemukan</string>
    <string name="scan_error">Siswa dengan NIS : %1$s gagal untuk discan. Terjadi kesalahan. Silahkan dicoba lagi</string>
    <string name="result_null">QR Code tidak memiliki informasi apapun</string>
    <string name="student_nis">NIS : %1$s</string>
    <string name="student_pagi">Makan Pagi : %1$s</string>
    <string name="student_siang">Makan Siang : %1$s</string>
    <string name="student_phone">No. HP : %1$s</string>
    <string name="report_date_time">%1$s, %2$d</string>
    <string name="register_nis">NIS</string>
    <string name="register_name">Nama</string>
    <string name="register_nohp">No. Hp</string>
    <string name="register_kelas">Kelas</string>
    <string name="register_tahun">Tahun Ajaran</string>
    <string name="register_pagi">Makan Pagi</string>
    <string name="register_siang">Makan Siang</string>
    <string name="register_porsi_pagi">Pagi Jumbo</string>
    <string name="register_porsi_siang">Siang Jumbo</string>
    <string name="register_nis_empty">NIS tidak boleh kosong !</string>
    <string name="register_name_empty">Nama tidak boleh kosong !</string>
    <string name="register_nohp_empty">No. Hp tidak boleh kosong !</string>
    <string name="register_kelas_empty">Kelas tidak boleh kosong !</string>
    <string name="register_tahun_empty">Tahun Ajaran tidak boleh kosong !</string>
    <string name="register_status_empty">Siswa harus makan di pagi atau siang hari !</string>
    <string name="register_nis_exist">NIS sudah terdaftar !</string>
    <string name="register_success">Siswa yang bernama %1$s dengan NIS : %2$s sukses didaftarkan</string>
    <string name="error">Terjadi Masalah</string>
    <string name="welcome">Selamat Datang, %1$s.</string>
    <string name="menu_scan">Scan</string>
    <string name="menu_absen">Absen Tidak Makan</string>
    <string name="menu_status">Status</string>
    <string name="menu_morning_portion">Porsi Pagi</string>
    <string name="menu_noon_portion">Porsi Siang</string>
    <string name="menu_config">Konfigurasi</string>
    <string name="menu_siswa">Siswa</string>
    <string name="menu_morning">Pagi</string>
    <string name="menu_noon">Siang</string>
    <string name="menu_morning_active">Aktif Pagi</string>
    <string name="menu_noon_active">Aktif Siang</string>
    <string name="menu_morning_non_active">Non Aktif Pagi</string>
    <string name="menu_noon_non_active">Non Aktif Siang</string>
    <string name="menu_portion_normal">Normal</string>
    <string name="menu_portion_jumbo">Jumbo</string>
    <string name="menu_student_list">List</string>
    <string name="menu_student_register">Registrasi</string>
    <string name="menu_change_password">Ganti Password</string>
    <string name="process_failed">Proses gagal</string>
    <string name="currency">Rp %1$s</string>
    <string name="period">Periode : %1$s</string>
    <string name="total">Total : Rp %1$s</string>
    <string name="logout">Logout</string>
    <string-array name="month_list">
        <item>Januari</item>
        <item>Februari</item>
        <item>Maret</item>
        <item>April</item>
        <item>Mei</item>
        <item>Juni</item>
        <item>Juli</item>
        <item>Agustus</item>
        <item>September</item>
        <item>Oktober</item>
        <item>November</item>
        <item>Desember</item>
    </string-array>
</resources>
