<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <ProgressBar
            style="?android:attr/progressBarStyleHorizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/progressbar"
            android:max="3"
            android:indeterminate="false"
            android:visibility="gone"
            android:theme="@android:style/Widget.Material.ProgressBar"/>
        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/_12sdp"
            android:layout_marginRight="@dimen/_12sdp"
            app:cardBackgroundColor="@color/white"
            app:cardCornerRadius="@dimen/_12sdp"
            app:contentPadding="@dimen/_12sdp"
            android:layout_margin="@dimen/_17sdp">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/_10sdp">
                    <EditText
                        android:id="@+id/register_nis"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:padding="@dimen/_10sdp"
                        android:hint="@string/register_nis"
                        android:inputType="number"
                        android:importantForAutofill="no"
                        tools:targetApi="o"/>
                </android.support.design.widget.TextInputLayout>
                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/_10sdp">
                    <EditText
                        android:id="@+id/register_name"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:padding="@dimen/_10sdp"
                        android:hint="@string/register_name"
                        android:inputType="textPersonName"
                        android:importantForAutofill="no"
                        tools:targetApi="o"/>
                </android.support.design.widget.TextInputLayout>
                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/_10sdp">
                    <EditText
                        android:id="@+id/register_nohp"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:padding="@dimen/_10sdp"
                        android:hint="@string/register_nohp"
                        android:inputType="phone"
                        android:importantForAutofill="no"
                        tools:targetApi="o"/>
                </android.support.design.widget.TextInputLayout>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/register_kelas"
                    android:padding="@dimen/_10sdp"
                    android:layout_marginBottom="@dimen/_10sdp"
                    android:textSize="@dimen/_14ssp"/>
                <android.support.v7.widget.AppCompatSpinner
                    android:id="@+id/register_kelas"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="@dimen/_10sdp"
                    android:layout_marginBottom="@dimen/_10sdp"
                    android:spinnerMode="dialog"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/register_tahun"
                    android:padding="@dimen/_10sdp"
                    android:layout_marginBottom="@dimen/_10sdp"
                    android:textSize="@dimen/_14ssp"/>
                <android.support.v7.widget.AppCompatSpinner
                    android:id="@+id/register_tahun"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="@dimen/_10sdp"
                    android:layout_marginBottom="@dimen/_10sdp"
                    android:spinnerMode="dialog"/>
                <android.support.v7.widget.SwitchCompat
                    android:id="@+id/register_pagi"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/register_pagi"
                    android:textSize="@dimen/_14ssp"
                    android:padding="@dimen/_10sdp"
                    android:layout_marginBottom="@dimen/_10sdp"/>
                <android.support.v7.widget.SwitchCompat
                    android:id="@+id/register_porsi_pagi"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/register_porsi_pagi"
                    android:textSize="@dimen/_14ssp"
                    android:padding="@dimen/_10sdp"
                    android:layout_marginBottom="@dimen/_10sdp"/>
                <android.support.v7.widget.SwitchCompat
                    android:id="@+id/register_siang"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/register_siang"
                    android:textSize="@dimen/_14ssp"
                    android:padding="@dimen/_10sdp"
                    android:layout_marginBottom="@dimen/_10sdp"/>
                <android.support.v7.widget.SwitchCompat
                    android:id="@+id/register_porsi_siang"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/register_porsi_siang"
                    android:textSize="@dimen/_14ssp"
                    android:padding="@dimen/_10sdp"
                    android:layout_marginBottom="@dimen/_10sdp"/>
                <Button
                    android:id="@+id/button_confirm"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="@dimen/_10sdp"
                    android:text="@string/save"
                    android:background="@color/colorPrimaryDark"
                    android:textColor="@color/white"/>
            </LinearLayout>
        </android.support.v7.widget.CardView>
    </LinearLayout>
</ScrollView>