<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <TextView
            android:id="@+id/welcome_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="@dimen/_17ssp"
            android:textColor="@color/black"
            android:layout_marginTop="@dimen/_20sdp"
            android:layout_marginLeft="@dimen/_17sdp"
            android:layout_marginRight="@dimen/_17sdp"/>
        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/_17sdp"
            android:layout_marginRight="@dimen/_17sdp"
            android:layout_marginTop="@dimen/_20sdp"
            app:cardBackgroundColor="@color/white"
            app:cardCornerRadius="@dimen/_12sdp"
            app:contentPadding="@dimen/_17sdp">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/menu_scan"
                    android:drawableStart="@drawable/ic_qrcode"
                    android:drawablePadding="@dimen/_17sdp"
                    android:gravity="center_vertical"
                    android:textSize="@dimen/_16ssp"
                    android:textColor="@color/black"
                    android:textStyle="bold"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/menu_absen"
                    android:textSize="@dimen/_12ssp"
                    android:textColor="@color/black"
                    android:layout_marginTop="@dimen/_17sdp"/>
                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="@android:color/darker_gray"/>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_marginTop="@dimen/_8sdp"
                    style="?android:attr/buttonBarStyle">
                    <Button
                        android:id="@+id/menu_morning_check"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:elevation="0dp"
                        android:text="@string/menu_morning"
                        android:background="@color/livingPink"
                        android:textSize="@dimen/_12ssp"
                        android:textColor="@color/white"
                        android:layout_margin="@dimen/_5sdp"
                        style="?android:attr/buttonBarButtonStyle"/>
                    <Button
                        android:id="@+id/menu_noon_check"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:elevation="0dp"
                        android:text="@string/menu_noon"
                        android:background="@color/livingOrange"
                        android:textColor="@color/white"
                        android:textSize="@dimen/_12ssp"
                        android:layout_margin="@dimen/_5sdp"
                        style="?android:attr/buttonBarButtonStyle"/>
                </LinearLayout>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/menu_status"
                    android:textSize="@dimen/_12ssp"
                    android:textColor="@color/black"
                    android:layout_marginTop="@dimen/_17sdp"/>
                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="@android:color/darker_gray"/>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_marginTop="@dimen/_8sdp"
                    style="?android:attr/buttonBarStyle">
                    <Button
                        android:id="@+id/menu_morning_active"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:elevation="0dp"
                        android:text="@string/menu_morning_active"
                        android:background="@color/livingPink"
                        android:textColor="@color/white"
                        android:textSize="@dimen/_12ssp"
                        android:layout_margin="@dimen/_5sdp"
                        style="?android:attr/buttonBarButtonStyle"/>
                    <Button
                        android:id="@+id/menu_noon_active"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:elevation="0dp"
                        android:text="@string/menu_noon_active"
                        android:background="@color/livingOrange"
                        android:textColor="@color/white"
                        android:textSize="@dimen/_12ssp"
                        android:layout_margin="@dimen/_5sdp"
                        style="?android:attr/buttonBarButtonStyle"/>
                </LinearLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    style="?android:attr/buttonBarStyle">
                    <Button
                        android:id="@+id/menu_morning_nonactive"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:elevation="0dp"
                        android:text="@string/menu_morning_non_active"
                        android:background="@color/livingPink"
                        android:textColor="@color/white"
                        android:textSize="@dimen/_12ssp"
                        android:layout_margin="@dimen/_5sdp"
                        style="?android:attr/buttonBarButtonStyle"/>
                    <Button
                        android:id="@+id/menu_noon_nonactive"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:elevation="0dp"
                        android:text="@string/menu_noon_non_active"
                        android:background="@color/livingOrange"
                        android:textColor="@color/white"
                        android:textSize="@dimen/_12ssp"
                        android:layout_margin="@dimen/_5sdp"
                        style="?android:attr/buttonBarButtonStyle"/>
                </LinearLayout>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/menu_morning_portion"
                    android:textSize="@dimen/_12ssp"
                    android:textColor="@color/black"
                    android:layout_marginTop="@dimen/_17sdp"/>
                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="@android:color/darker_gray"/>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_marginTop="@dimen/_8sdp"
                    style="?android:attr/buttonBarStyle">
                    <Button
                        android:id="@+id/menu_morning_normal"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:elevation="0dp"
                        android:text="@string/menu_portion_normal"
                        android:background="@color/livingPink"
                        android:textColor="@color/white"
                        android:textSize="@dimen/_12ssp"
                        android:layout_margin="@dimen/_5sdp"
                        style="?android:attr/buttonBarButtonStyle"/>
                    <Button
                        android:id="@+id/menu_morning_jumbo"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:elevation="0dp"
                        android:text="@string/menu_portion_jumbo"
                        android:background="@color/livingOrange"
                        android:textColor="@color/white"
                        android:textSize="@dimen/_12ssp"
                        android:layout_margin="@dimen/_5sdp"
                        style="?android:attr/buttonBarButtonStyle"/>
                </LinearLayout>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/menu_noon_portion"
                    android:textSize="@dimen/_12ssp"
                    android:textColor="@color/black"
                    android:layout_marginTop="@dimen/_17sdp"/>
                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="@android:color/darker_gray"/>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_marginTop="@dimen/_8sdp"
                    style="?android:attr/buttonBarStyle">
                    <Button
                        android:id="@+id/menu_noon_normal"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:elevation="0dp"
                        android:text="@string/menu_portion_normal"
                        android:background="@color/livingPink"
                        android:textColor="@color/white"
                        android:textSize="@dimen/_12ssp"
                        android:layout_margin="@dimen/_5sdp"
                        style="?android:attr/buttonBarButtonStyle"/>
                    <Button
                        android:id="@+id/menu_noon_jumbo"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:elevation="0dp"
                        android:text="@string/menu_portion_jumbo"
                        android:background="@color/livingOrange"
                        android:textColor="@color/white"
                        android:textSize="@dimen/_12ssp"
                        android:layout_margin="@dimen/_5sdp"
                        style="?android:attr/buttonBarButtonStyle"/>
                </LinearLayout>
            </LinearLayout>
        </android.support.v7.widget.CardView>
        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/_17sdp"
            android:layout_marginRight="@dimen/_17sdp"
            android:layout_marginTop="@dimen/_20sdp"
            app:cardBackgroundColor="@color/white"
            app:cardCornerRadius="@dimen/_12sdp"
            app:contentPadding="@dimen/_17sdp">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/menu_siswa"
                    android:drawableStart="@drawable/ic_user_graduate"
                    android:drawablePadding="@dimen/_17sdp"
                    android:gravity="center_vertical"
                    android:textSize="@dimen/_16ssp"
                    android:textColor="@color/black"
                    android:textStyle="bold"
                    android:layout_marginBottom="@dimen/_17sdp"/>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">
                    <Button
                        android:id="@+id/menu_student_list"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:elevation="0dp"
                        android:text="@string/menu_student_list"
                        android:background="@color/livingPink"
                        android:textColor="@color/white"
                        android:textSize="@dimen/_12ssp"
                        android:layout_margin="@dimen/_5sdp"
                        style="?android:attr/buttonBarButtonStyle"/>
                    <Button
                        android:id="@+id/menu_student_register"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:elevation="0dp"
                        android:text="@string/menu_student_register"
                        android:background="@color/livingOrange"
                        android:textColor="@color/white"
                        android:textSize="@dimen/_12ssp"
                        android:layout_margin="@dimen/_5sdp"
                        style="?android:attr/buttonBarButtonStyle"/>
                </LinearLayout>
            </LinearLayout>
        </android.support.v7.widget.CardView>
        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/_17sdp"
            android:layout_marginRight="@dimen/_17sdp"
            android:layout_marginTop="@dimen/_20sdp"
            app:cardBackgroundColor="@color/white"
            app:cardCornerRadius="@dimen/_12sdp"
            app:contentPadding="@dimen/_17sdp">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/menu_config"
                    android:drawableStart="@drawable/ic_cog"
                    android:drawablePadding="@dimen/_17sdp"
                    android:gravity="center_vertical"
                    android:textSize="@dimen/_16ssp"
                    android:textColor="@color/black"
                    android:textStyle="bold"
                    android:layout_marginBottom="@dimen/_17sdp"/>
                <Button
                    android:id="@+id/menu_change_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:elevation="0dp"
                    android:text="@string/menu_change_password"
                    android:background="@color/livingOrange"
                    android:textColor="@color/white"
                    android:textSize="@dimen/_12ssp"
                    style="?android:attr/buttonBarButtonStyle"/>
            </LinearLayout>
        </android.support.v7.widget.CardView>
        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/logout"
            android:layout_margin="@dimen/_17sdp"
            android:background="@color/colorWarning"
            android:textColor="@color/white"
            android:id="@+id/button_logout"/>
    </LinearLayout>
</ScrollView>